force-app/main/default/objects/Payment_Step__mdt/Payment_Step__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to set which step of the payment tracking is associated to each status-reason pair.</description>
    <label>Payment Step</label>
    <pluralLabel>Payment Steps</pluralLabel>
</CustomObject>