force-app/main/default/objects/Payment_Step__mdt/fields/PAY_PCK_Reason__c.field-meta.xml
<CustomField>
    <fullName>PAY_PCK_Reason__c</fullName>
    <label>Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>000</fullName>
                <default>true</default>
                <label>000</label>
            </value>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>