force-app/main/default/objects/Payment_Step__mdt/fields/PAY_PCK_Status__c.field-meta.xml
<CustomField>
    <fullName>PAY_PCK_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <default>true</default>
                <label>001</label>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>201</fullName>
            </value>
            <value>
                <fullName>202</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>801</fullName>
            </value>
            <value>
                <fullName>990</fullName>
            </value>
            <value>
                <fullName>997</fullName>
            </value>
            <value>
                <fullName>998</fullName>
            </value>
            <value>
                <fullName>999</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>