force-app/main/default/objects/Payment_Step__mdt/fields/PAY_PCK_TrackingStep__c.field-meta.xml
<CustomField>
    <fullName>PAY_PCK_TrackingStep__c</fullName>
    <label>Tracking Step</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creation</fullName>
                <default>true</default>
                <label>Creation</label>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>